# BlockchainCoin

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: quality.yml
blockchaincoin/: __init__.py  chain.py  cli.py  consensus.py  constants.py  crypto.py  fork_choice.py  models.py  network.py  node.py  peer.py  peers.py  release.py  runtime.py  service.py  storage.py  transport.py  utxo_node.py
constraints/: release.txt
docs/: api-reference.md  architecture.md  external-audit-checklist.md  incident-response.md  production-roadmap.md  release-key-custody.md  reproducible-builds.md
fuzz/: fuzz_consensus_codecs.py  fuzz_network_frames.py
tests/: test_blockchaincoin.py  test_ci_config.py  test_consensus.py  test_docs.py  test_end_to_end_cli.py  test_fork_choice.py  test_fork_store.py  test_fuzz_harnesses.py  test_hardening.py  test_network.py  test_node_storage.py  test_peer.py  test_peers.py  test_release.py  test_runtime.py  test_service.py  test_transport.py  test_utxo_cli.py  test_utxo_node.py
