[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "blockchaincoin"
version = "0.1.0"
description = "A Python blockchain currency node implementation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "BlockchainCoin Contributors" }
]
dependencies = [
  "cryptography>=42.0.0"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography"
]

[project.scripts]
blockchaincoin = "blockchaincoin.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["blockchaincoin"]

[tool.hatch.build.targets.wheel.force-include]
"blockchaincoin/py.typed" = "blockchaincoin/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "coverage[toml]>=7.6.0",
  "hypothesis>=6.100.0",
  "pyright>=1.1.390",
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "N",
  "SIM",
  "UP",
  "W"
]

[tool.pyright]
include = ["blockchaincoin", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."

[tool.coverage.run]
branch = true
source = ["blockchaincoin"]
omit = [
  "blockchaincoin/__main__.py"
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
  "if __name__ == .__main__.:"
]
